# learn_cpp

./: CMakeLists.txt  main.cpp  main2  main2.cpp  main2.h  template  template.cpp
inheritance/: 01_inheritance  01_inheritance.cpp  03_constructor  03_constructor.cpp  04_derived  04_derived.cpp  05_.cpp  InheritencePractical  InheritencePractical.cpp
strings/: 01_string  01_string.cpp  02_string_insert  02_string_insert.cpp  03_string_search  03_string_search.cpp
struct/: 01_struct.cpp  02_struct_ref  02_struct_ref.cpp  03_struct_change  03_struct_change.cpp
